<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appointment"
    android:background="@drawable/bg"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">



        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/arrow" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/search" />


    </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="125dp">


        <RelativeLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/leaf"
                android:paddingTop="-20dp"/>

            <EditText
                android:id="@+id/patname"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/area"
                android:inputType="textPersonName"
                android:paddingLeft="55dp"
                android:paddingTop="20dp"
                android:textSize="25dp"
                />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/location_removebg_preview"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/search"
                android:paddingTop="-20dp"/>

            <EditText
                android:id="@+id/searchdoc"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/searchdoc"
                android:inputType="textPersonName"
                android:paddingLeft="55dp"
                android:paddingTop="20dp"
                android:textSize="25dp" />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/calendar__1__removebg_preview"
                android:paddingTop="-20dp"/>

            <EditText
                android:id="@+id/date"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="textPersonName"
                android:paddingLeft="55dp"
                android:paddingTop="20dp"
                android:textSize="25dp" />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="?actionBarSize">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_centerVertical="true"
                android:padding="15dp"
                android:src="@drawable/clock_removebg_preview"
                android:paddingTop="-20dp"/>

            <EditText
                android:id="@+id/time"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/time"
                android:inputType="textPersonName"
                android:paddingLeft="55dp"
                android:paddingTop="20dp"
                android:textSize="25dp" />



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="350dp"
            android:layout_gravity="center"
            android:layout_height="?actionBarSize">


            <Button
                android:id="@+id/button3"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/bappointment"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:gravity="center"
                android:foregroundGravity="center"
                android:background="@drawable/roundbutton"/>
        </RelativeLayout>

    </LinearLayout>




</LinearLayout>